# landscape

./: ADOPTERS.md  Cargo.toml  README.md
.github/workflows/: build-images.yml  release.yml
crates/cli/: Cargo.toml  Dockerfile
crates/cli/src/: main.rs
crates/cli/src/new/: mod.rs
crates/cli/src/new/template/: data.yml  games.yml  guide.yml  settings.yml
crates/cli/src/validate/: mod.rs
crates/core/: Cargo.toml
crates/core/src/testdata/: data.yml  settings.yml
crates/wasm/overlay/: Cargo.toml  overlay-test.html
crates/wasm/overlay/src/: lib.rs
crates/wasm/quiz/: Cargo.toml  quiz-test.html
crates/wasm/quiz/src/: lib.rs
docs/config/: data.yml  guide.yml  settings.yml
scripts/: landscape2-validate.sh
ui/webapp/: package.json
ui/webapp/src/layout/games/: Content.tsx
ui/webapp/src/layout/navigation/: Footer.tsx  MiniFooter.tsx
ui/webapp/src/utils/: overlayData.ts
