[package]
name = "landscape-overlay"
description = "Landscape overlay data provider"
repository = "https://github.com/khulnasoft/landscape"
readme = "../../../README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
landscape-core = { path = "../../core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
